Fix layout and spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,15 +61,14 @@ img {
 
 .container {
   max-width: 1128px;
-  padding: 0;
   margin: 0 auto;
+  max-width: 1440px;
 }
 
 /*----------- header -----------*/
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
-  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -196,14 +195,21 @@ img {
 
 /*------------ features ------------*/
 
+/* .features-container {
+  padding: 120px;
+} */
+
 .features-list {
   display: flex;
   gap: 24px;
-  padding: 120px 0;
+  justify-content: center;
+  padding: 120px;
 }
 
 .features-item {
   width: calc((100% - 72px) / 4);
+  max-width: 264px;
+  max-height: 104px;
 }
 
 .features-item-title {
@@ -226,6 +232,7 @@ img {
 
 .team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
 .team-subtitle {
@@ -242,14 +249,16 @@ img {
 .team-list {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 .team-item {
   background-color: #fff;
   width: calc((100% - 72px) / 4);
-  margin-bottom: 120px;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px;
+  max-width: 264px;
+  max-height: 380px;
 }
 
 .person-card {
@@ -290,15 +299,17 @@ img {
 
 .portfolio-list {
   display: flex;
-  gap: 24px;
+  gap: 48px 24px;
   flex-wrap: wrap;
-  margin: 48px;
   background-color: #fff;
   padding-bottom: 120px;
+  justify-content: center;
 }
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  max-width: 360px;
+  max-height: 420px;
 }
 
 .portfolio-item-title {
@@ -307,8 +318,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 32px;
-  margin-bottom: 8px;
+  margin: 0 0 8px 0;
 }
 
 .portfolio-item-text {
@@ -316,11 +326,10 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-bottom: 32px;
+  margin: 0;
 }
 
 .portfolio-name {
-  margin-bottom: 48px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
@@ -347,7 +356,5 @@ img {
 }
 
 .footer-container {
-  padding-top: 100px;
-  padding-left: 156px;
-  padding-bottom: 100px;
+  padding: 100px;
 }
